# variantformer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  download_artifacts.py  install.sh  install_local.sh  pyproject.toml
anatomagram/data/: tissue_mapping_enhanced.json
configs/: d2c_model.yaml  veploader.yaml
datasets/: vcfdataset.py  vepdataset.py
notebooks/: README.md  eqtl_analysis.ipynb  test_vcf_creation.ipynb  variant2exp.ipynb  variant2risk.ipynb  vcf2exp.ipynb  vcf2exp.py  vcf2risk.ipynb  vcf2risk.py
processors/: ad_risk.py  model_manager.py  multi_datasets_loader.py  variantprocessor.py  vcfprocessor.py
scripts/: validate_fast_consensus.py
seq2gene/: model.py  model_combined_modulator.py
src/configs/: vcfloader.yaml
src/datasets/: vcfdataset.py
src/processors/: vcfprocessor.py
src/seq2gene/: data_process.py
src/seq2gene/modules/: layers.py
src/seq2reg/: losses.py  model.py  modules.py
src/utils/: constants.py
src/vocabs/: bpe_vocabulary_500.json  tissue_prob.yaml
tests/: test_ad_risk.py  test_model.py  test_vep.py
utils/: assets.py  data_process.py  fast_consensus.py  functions.py  seq.py
vep/tests/: test_vep.py
vocabs/: dataset_vocab.yaml  tissue_vocab.yaml
