[project]
name = "VariantFormer"
version = "0.1.0"
description = "A tool for variant effect prediction and gene expression analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "CZI", email = "info@chanzuckerberg.com"}
]

dependencies = [
    "boto3~=1.40.49",
    "duckdb~=1.4.1",
    "einops~=0.8.1",
    "flash-attn~=2.7.4.post1",
    "joblib~=1.3.2",
    "lightning~=2.5.1",
    "lightning-utilities~=0.14.3",
    "mlflow~=2.22.0",
    "ninja~=1.11.1",
    "numpy~=2.2.5",
    "omegaconf~=2.3.0",
    "pandas~=2.2.3",
    "psutil~=7.0.0",
    "pybedtools~=0.12.0",
    "pynvml~=12.0.0",
    "python-dateutil~=2.9.0",
    "pytorch-lightning~=2.5.1",
    "scanpy~=1.11.1",
    "scikit-learn~=1.5.2",
    "scipy~=1.15.3",
    "tokenizers~=0.21.1",
    "torch~=2.7.0",
    "torchaudio~=2.7.0",
    "torchmetrics~=1.7.1",
    "torchvision~=0.22.0",
    "tqdm~=4.67.1",
    "treelite>=4.4.1",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.1.1",
]
test = [
    "pytest>=8.4.2",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools>=80.9.0", "torch>=2.7,<2.8"]
